fix missing sidebar button on small screens

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -329,7 +329,7 @@ div[hex-country] {
 }
 
 .floating-splash .floating-splash-content {
-	padding: 100px 20px 0px 20px;
+	padding: 80px 20px 0px 20px;
 	text-align: center;
 	font-weight: 300;
 	font-size: 20px;
